Make the dependency of enable_print_preview and enable_pdf explicit

Print preview needs pdf module enabled to function. Also, the
utility component depends on pdf module only when print_preview is
enabled implicitly (on Windows only) or explicitly. Make the gn build
file changes to reflect these dependencies.

BUG=609726

Review-Url: https://codereview.chromium.org/1994713002
Cr-Commit-Position: refs/heads/master@{#395519}