chrome/utility/printing_handler.h
@@ -13,8 +13,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ipc/ipc_platform_file.h"
 #include "printing/pdf_render_settings.h"
 
-#if !defined(ENABLE_PRINT_PREVIEW) && !defined(OS_WIN)
-#error "Windows or full printing must be enabled"
+#if !defined(ENABLE_PRINT_PREVIEW) && \
+    !(defined(ENABLE_BASIC_PRINTING) && defined(OS_WIN))
+#error "Windows basic printing or print preview must be enabled"
 #endif
 
 namespace printing {
